--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
         <h2>We are a team of <br> <hr>
           <span class="pt">Professional Translators</span></h2>
         <div>
-          <a href="#about" class="btn btn-get-started scrollto">Get Started <span class="fa fa-arrow-down"></span></a>
+          <a href="/get-started" class="btn btn-get-started scrollto">Get Started <span class="fa fa-arrow-down"></span></a>
           <a href="#services" class="btn btn-services scrollto">Our Services</a>
         </div>
       </div>
